--- a/style.css
+++ b/style.css
@@ -607,6 +607,77 @@ footer a:hover{
     color : #088178;
 }
 
+/* Single Product Section */
+
+#prodetails{
+    padding: 40px 80px;
+    display: flex;
+    margin-top: 20px;
+}
+
+.single-pro-image{
+    width: 40%;
+    margin-right: 50px;
+}
+
+.sm-img-grp{
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.sm-img-col{
+    flex-basis: 24%;
+    cursor: pointer;
+}
+
+.single-pro-desc{
+    width: 50%;
+    padding-top: 30px;
+}
+
+.single-pro-desc h4{
+    padding: 40px 0 20px 0;
+}
+
+.single-pro-desc h3{
+    font-size: 1.5rem;
+}
+
+.single-pro-desc select{
+    display: block;
+    padding: 5px 10px;
+    margin:  20px 0 10px 0;
+}
+
+.single-pro-desc input{
+    width: 50px;
+    height: 45px;
+    padding-left: 10px;
+    margin-right: 10px;
+    font-size: 1rem;
+}
+
+.single-pro-desc input:focus{
+    outline: none;
+}
+
+.single-pro-desc button{
+    padding: 15px 20px;
+    background-color: #088178;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 4px;
+    border: none;
+    font-weight: 600;
+}
+
+.single-pro-desc span{
+    margin-top: 20px;
+    line-height: 25px;
+
+}
+
 /* Start media query */
 
 @media(max-width: 799px){
@@ -770,6 +841,12 @@ footer a:hover{
 
     margin-top: 30px;
     }
+
+    /* Single product */
+    #prodetails {
+    padding: 40px 40px;
+
+    }
  
 }
 
@@ -882,4 +959,25 @@ footer a:hover{
     .news-form button {
     width: 30%;
     }
+
+    /* Single image */
+
+    #prodetails {
+    padding: 40px 20px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 0px;
 }
+
+    .single-pro-image {
+    width: 100%;
+    margin-right: 0px;
+}
+
+    .single-pro-desc {
+    width: 100%;
+    padding-top: 30px;
+}
+
+}
+
